--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,10 @@
           <%= link_to "Home", drawings_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Dream Gallery", "#", class: "nav-link" %>
+          <%= link_to "Collaborations", collaborations_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Dream Gallery", dream_gallery_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= cl_image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
