--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -19,7 +19,6 @@
 <!-- My artwork -->
 <h1>My Drawings</h1>
 <div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-
   <h1>My Drawings</h1>
   <div class="row">
     <% @kid.drawings.each do |drawing| %>
@@ -29,7 +28,6 @@
     <% end %>
   </div>
   <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
-
 </div>
 <!-- My collabs -->
 <h1>My Collaborations</h1>
@@ -37,10 +35,11 @@
   <h1>My Collaborations</h1>
   <div class="row">
     <% @collaborations.each do |collab| %>
-      <div class="image-card col-md-4 col-sm-8">
-        <p><%= cl_image_tag collab.collab_upload %></p>
-      </div>
+      <% if current_user.id == collab.drawing.kid_id %>
+        <div class="image-card col-md-4 col-sm-8">
+          <p><%= cl_image_tag collab.collab_upload %></p>
+        </div>
+      <% end %>
     <%end%>
   </div>
-
 </div>
